# split-loaf

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  linux_test.c  main.c
.github/workflows/: build.yml
src/app/: main.cpp
src/core/: Backend.h  Platform.cpp  Platform.h
src/linux/: LinuxApp.cpp  linux_test.c  linux_test.cpp
src/res/: resource.rc
src/win/: WinApp.cpp  WinBackend.cpp  WinBackend.h  WinHooks.cpp  WinHooks.h  WinTray.cpp
